--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ footer-links:
   instagram: #https://instagram.com/<>
   linkedin: #https://www.linkedin.com/in/<>
   pinterest: #https://www.pinterest.com/<>
-  rss: test #随便填点啥RSS就能用了
+  rss: #随便填点啥RSS就能用了
   stackoverflow: # http://stackoverflow.com/<>
   tumblr: # https://<username>.tumblr.com
   twitter: # https://www.twitter.com/<your_twitter_username> 
@@ -61,7 +61,7 @@ footer-text: Copyright (c) 2020 Moreau All right reserve.
 # 评论，注意，请不要同时添加多种不同的评论区
 
 # 输入Disqus shortname，即可添加评论区
-disqus:  #shortname
+disqus: tohka #shortname
 
 # 输入Gitalk相关设定，即可添加评论区
 gitalk:
